syntax = "proto2";
package ams_act_con;


 
message CmdBase
{
    optional int64 seq_id = 1;     
    optional int64 cmd_id = 2;     
    optional int64 type = 3;  
    optional bytes from_ip = 4;    
    optional int64 process_id = 5; 
    optional int64 mod_id = 6;     
	optional bytes version = 8;		
    optional bytes body = 7;       
                                   
	optional bytes app_id = 9;             
};
